# colorparse

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  README.rst  __init__.py  change-log.md  color  color.py  colorparse  colorparse.py  colors.py  md2rst.py  mkdocs.yml
docs/: conf.py  further-reading.md  index.md  index.rst  module-content.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  (+5 more)
docs/source/: change-defaults-table.csv  getting-started.rst  options-table.csv  paint-table.csv  terminal.rst  true-color-table.csv
example/: README.md  README.rst
mkdocs_old/: mkdocs.yml
mkdocs_old/docs/: index.md  md2rst.py  terminal.md
module/: .gitignore  LICENSE  README.md  pyproject.toml  run  test.py
module/colorparse/: __init__.py  _constants.py  _containers.py  _datatypes.py  _internal.py  _util.py
module/colorparse/typeshed/: __init__.pyi  _datatypes.pyi  _types.pyi  _util.pyi
module/test/: __init__.py  parse_test.py  util.py
package-files/: LICENSE  Makefile  README.md  colorparse.py  log.txt  make-color  setup.py
package-files/colorparse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
package_files/: LICENSE  colorparse  colorparse.py
sphinx/: Makefile
sphinx/_build/: .buildinfo  further-reading.html  genindex-C.html  genindex-D.html  genindex-P.html  genindex-T.html  genindex-all.html  genindex.html  getting-started.html  index.html  module-content.html  objects.inv  py-modindex.html  search.html  searchindex.js  terminal.html
test/source/: conf.py  index.rst
(+31 files in other folders)
